@@ -1,6 +1,8 @@
 LIST OF CHANGES
 ---------------
 
+ - iRODS connections to be opened on-demand for validation
+
 release 58.1.0
  - added npg_climb2mlwh to update warehouse from uploaded
    climb data
